feat: 로고 적용
DTO를 통해 트래픽 절감

class 동일할 경우 가중치